@@ -1,12 +1,15 @@
 package org.opentripplanner.ext.vectortiles.layers.stations;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.Collection;
 import java.util.List;
-import java.util.Map;
+import java.util.Locale;
 import java.util.stream.Collectors;
-import org.json.simple.JSONArray;
-import org.opentripplanner.common.model.T2;
-import org.opentripplanner.ext.vectortiles.PropertyMapper;
+import org.opentripplanner.apis.support.mapping.PropertyMapper;
+import org.opentripplanner.framework.i18n.I18NStringMapper;
+import org.opentripplanner.framework.json.ObjectMappers;
+import org.opentripplanner.inspector.vector.KeyValue;
 import org.opentripplanner.transit.model.framework.FeedScopedId;
 import org.opentripplanner.transit.model.site.Station;
 import org.opentripplanner.transit.model.site.StopLocation;
@@ -14,54 +17,65 @@ import org.opentripplanner.transit.service.TransitService;
 
 public class DigitransitStationPropertyMapper extends PropertyMapper<Station> {
 
+  private static final ObjectMapper OBJECT_MAPPER = ObjectMappers.ignoringExtraFields();
   private final TransitService transitService;
+  private final I18NStringMapper i18NStringMapper;
 
-  private DigitransitStationPropertyMapper(TransitService transitService) {
+  private DigitransitStationPropertyMapper(TransitService transitService, Locale locale) {
     this.transitService = transitService;
+    this.i18NStringMapper = new I18NStringMapper(locale);
   }
 
-  public static DigitransitStationPropertyMapper create(TransitService transitService) {
-    return new DigitransitStationPropertyMapper(transitService);
+  public static DigitransitStationPropertyMapper create(
+    TransitService transitService,
+    Locale locale
+  ) {
+    return new DigitransitStationPropertyMapper(transitService, locale);
   }
 
   @Override
-  public Collection<T2<String, Object>> map(Station station) {
-    var childStops = station.getChildStops();
-
-    return List.of(
-      new T2<>("gtfsId", station.getId().toString()),
-      // Name is I18NString now, we return default name
-      new T2<>("name", station.getName().toString()),
-      new T2<>(
-        "type",
-        childStops
-          .stream()
-          .flatMap(stop -> transitService.getPatternsForStop(stop).stream())
-          .map(tripPattern -> tripPattern.getMode().name())
-          .distinct()
-          .collect(Collectors.joining(","))
-      ),
-      new T2<>(
-        "stops",
-        JSONArray.toJSONString(
-          childStops.stream().map(StopLocation::getId).map(FeedScopedId::toString).toList()
-        )
-      ),
-      new T2<>(
-        "routes",
-        JSONArray.toJSONString(
+  public Collection<KeyValue> map(Station station) {
+    try {
+      var childStops = station.getChildStops();
+      return List.of(
+        new KeyValue("gtfsId", station.getId().toString()),
+        new KeyValue("name", i18NStringMapper.mapNonnullToApi(station.getName())),
+        new KeyValue(
+          "type",
           childStops
             .stream()
-            .flatMap(stop -> transitService.getRoutesForStop(stop).stream())
+            .flatMap(stop -> transitService.getPatternsForStop(stop).stream())
+            .map(tripPattern -> tripPattern.getMode().name())
             .distinct()
-            .map(route ->
-              route.getShortName() == null
-                ? Map.of("mode", route.getMode().name())
-                : Map.of("mode", route.getMode().name(), "shortName", route.getShortName())
-            )
-            .collect(Collectors.toList())
+            .collect(Collectors.joining(","))
+        ),
+        new KeyValue(
+          "stops",
+          OBJECT_MAPPER.writeValueAsString(
+            childStops.stream().map(StopLocation::getId).map(FeedScopedId::toString).toList()
+          )
+        ),
+        new KeyValue(
+          "routes",
+          OBJECT_MAPPER.writeValueAsString(
+            childStops
+              .stream()
+              .flatMap(stop -> transitService.getRoutesForStop(stop).stream())
+              .distinct()
+              .map(route -> {
+                var obj = OBJECT_MAPPER.createObjectNode();
+                obj.put("mode", route.getMode().name());
+                if (route.getShortName() != null) {
+                  obj.put("shortName", route.getShortName());
+                }
+                return obj;
+              })
+              .toList()
+          )
         )
-      )
-    );
+      );
+    } catch (JsonProcessingException e) {
+      throw new RuntimeException(e);
+    }
   }
 }
