@@ -18,36 +18,37 @@ import org.locationtech.jts.geom.MultiLineString;
 import org.locationtech.jts.geom.MultiPolygon;
 import org.locationtech.jts.geom.Point;
 import org.locationtech.jts.geom.Polygon;
-import org.opentripplanner.common.geometry.SphericalDistanceLibrary;
-import org.opentripplanner.common.model.P2;
-import org.opentripplanner.graph_builder.DataImportIssueStore;
-import org.opentripplanner.graph_builder.issues.AreaTooComplicated;
-import org.opentripplanner.graph_builder.module.osm.OpenStreetMapModule.Handler;
+import org.opentripplanner.astar.model.GraphPath;
+import org.opentripplanner.astar.model.ShortestPathTree;
+import org.opentripplanner.astar.spi.SkipEdgeStrategy;
+import org.opentripplanner.framework.geometry.GeometryUtils;
+import org.opentripplanner.framework.geometry.SphericalDistanceLibrary;
+import org.opentripplanner.framework.i18n.I18NString;
+import org.opentripplanner.graph_builder.issue.api.DataImportIssueStore;
+import org.opentripplanner.graph_builder.services.osm.EdgeNamer;
 import org.opentripplanner.openstreetmap.model.OSMNode;
 import org.opentripplanner.openstreetmap.model.OSMRelation;
 import org.opentripplanner.openstreetmap.model.OSMRelationMember;
 import org.opentripplanner.openstreetmap.model.OSMWithTags;
-import org.opentripplanner.routing.algorithm.astar.AStarBuilder;
-import org.opentripplanner.routing.algorithm.astar.strategies.SkipEdgeStrategy;
-import org.opentripplanner.routing.api.request.RoutingRequest;
-import org.opentripplanner.routing.core.RoutingContext;
-import org.opentripplanner.routing.core.State;
-import org.opentripplanner.routing.core.TraverseMode;
-import org.opentripplanner.routing.edgetype.AreaEdge;
-import org.opentripplanner.routing.edgetype.AreaEdgeList;
-import org.opentripplanner.routing.edgetype.NamedArea;
-import org.opentripplanner.routing.edgetype.StreetEdge;
-import org.opentripplanner.routing.edgetype.StreetTraversalPermission;
-import org.opentripplanner.routing.graph.Edge;
+import org.opentripplanner.openstreetmap.wayproperty.WayProperties;
+import org.opentripplanner.routing.api.request.RouteRequest;
+import org.opentripplanner.routing.api.request.StreetMode;
+import org.opentripplanner.routing.api.request.request.StreetRequest;
 import org.opentripplanner.routing.graph.Graph;
-import org.opentripplanner.routing.graph.Vertex;
-import org.opentripplanner.routing.spt.DominanceFunction;
-import org.opentripplanner.routing.spt.GraphPath;
-import org.opentripplanner.routing.spt.ShortestPathTree;
-import org.opentripplanner.routing.vertextype.IntersectionVertex;
-import org.opentripplanner.routing.vertextype.OsmVertex;
-import org.opentripplanner.transit.model.basic.I18NString;
-import org.opentripplanner.util.geometry.GeometryUtils;
+import org.opentripplanner.street.model.StreetTraversalPermission;
+import org.opentripplanner.street.model.edge.AreaEdge;
+import org.opentripplanner.street.model.edge.AreaEdgeBuilder;
+import org.opentripplanner.street.model.edge.AreaEdgeList;
+import org.opentripplanner.street.model.edge.Edge;
+import org.opentripplanner.street.model.edge.NamedArea;
+import org.opentripplanner.street.model.edge.StreetEdge;
+import org.opentripplanner.street.model.vertex.IntersectionVertex;
+import org.opentripplanner.street.model.vertex.OsmVertex;
+import org.opentripplanner.street.model.vertex.Vertex;
+import org.opentripplanner.street.model.vertex.VertexFactory;
+import org.opentripplanner.street.search.StreetSearchBuilder;
+import org.opentripplanner.street.search.state.State;
+import org.opentripplanner.street.search.strategy.DominanceFunctions;
 
 /**
  * Theoretically, it is not correct to build the visibility graph on the joined polygon of areas
@@ -67,7 +68,7 @@ import org.opentripplanner.util.geometry.GeometryUtils;
  * number of edges for an area wouldn't be determined by the nodes. The current approach can lead
  * to an excessive number of edges, or to no edges at all if maxAreaNodes is surpassed.
  */
-public class WalkableAreaBuilder {
+class WalkableAreaBuilder {
 
   private final DataImportIssueStore issueStore;
 
@@ -75,14 +76,11 @@ public class WalkableAreaBuilder {
 
   private final Graph graph;
 
-  private final OSMDatabase osmdb;
-
-  private final WayPropertySet wayPropertySet;
+  private final OsmDatabase osmdb;
 
   private final Map<OSMWithTags, WayProperties> wayPropertiesCache = new HashMap<>();
 
-  // This is an awful hack, but this class (WalkableAreaBuilder) ought to be rewritten.
-  private final Handler handler;
+  private final VertexGenerator vertexBuilder;
 
   private final HashMap<Coordinate, IntersectionVertex> areaBoundaryVertexForCoordinate = new HashMap<>();
 
@@ -90,12 +88,16 @@ public class WalkableAreaBuilder {
 
   private final List<OsmVertex> platformLinkingEndpoints;
   private final Set<String> boardingLocationRefTags;
+  private final EdgeNamer namer;
+  private final SafetyValueNormalizer normalizer;
+  private final VertexFactory vertexFactory;
 
   public WalkableAreaBuilder(
     Graph graph,
-    OSMDatabase osmdb,
-    WayPropertySet wayPropertySet,
-    Handler handler,
+    OsmDatabase osmdb,
+    VertexGenerator vertexBuilder,
+    EdgeNamer namer,
+    SafetyValueNormalizer normalizer,
     DataImportIssueStore issueStore,
     int maxAreaNodes,
     boolean platformEntriesLinking,
@@ -103,8 +105,9 @@ public class WalkableAreaBuilder {
   ) {
     this.graph = graph;
     this.osmdb = osmdb;
-    this.wayPropertySet = wayPropertySet;
-    this.handler = handler;
+    this.vertexBuilder = vertexBuilder;
+    this.namer = namer;
+    this.normalizer = normalizer;
     this.issueStore = issueStore;
     this.maxAreaNodes = maxAreaNodes;
     this.platformEntriesLinking = platformEntriesLinking;
@@ -119,6 +122,7 @@ public class WalkableAreaBuilder {
           .filter(this::isPlatformLinkingEndpoint)
           .collect(Collectors.toList())
         : List.of();
+    this.vertexFactory = new VertexFactory(graph);
   }
 
   /**
@@ -134,8 +138,7 @@ public class WalkableAreaBuilder {
       AreaEdgeList edgeList = new AreaEdgeList(ring.jtsPolygon, references);
       // the points corresponding to concave or hole vertices
       // or those linked to ways
-      HashSet<P2<OSMNode>> alreadyAddedEdges = new HashSet<>();
-
+      HashSet<NodeEdge> alreadyAddedEdges = new HashSet<>();
       // we also want to fill in the edges of this area anyway, because we can,
       // and to avoid the numerical problems that they tend to cause
       for (Area area : group.areas) {
@@ -167,7 +170,7 @@ public class WalkableAreaBuilder {
             .filter(IntersectionVertex.class::isInstance)
             .map(IntersectionVertex.class::cast)
         )
-        .forEach(edgeList.visibilityVertices::add);
+        .forEach(edgeList::addVisibilityVertex);
 
       createNamedAreas(edgeList, ring, group.areas);
     }
@@ -208,7 +211,7 @@ public class WalkableAreaBuilder {
       // the points corresponding to concave or hole vertices
       // or those linked to ways
       HashSet<OSMNode> visibilityNodes = new HashSet<>();
-      HashSet<P2<OSMNode>> alreadyAddedEdges = new HashSet<>();
+      HashSet<NodeEdge> alreadyAddedEdges = new HashSet<>();
       HashSet<IntersectionVertex> platformLinkingVertices = new HashSet<>();
       // we need to accumulate visibility points from all contained areas
       // inside this ring, but only for shared nodes; we don't care about
@@ -225,21 +228,23 @@ public class WalkableAreaBuilder {
           continue;
         }
 
-        // Add stops from public transit relations into the area
-        Collection<OSMNode> nodes = osmdb.getStopsInArea(area.parent);
-        if (nodes != null) {
-          for (OSMNode node : nodes) {
-            var vertex = handler.getVertexForOsmNode(node, areaEntity);
-            platformLinkingVertices.add(vertex);
-            visibilityNodes.add(node);
-            startingNodes.add(node);
-            edgeList.visibilityVertices.add(vertex);
-          }
+        // Add stops/entrances from public transit relations into the area
+        // they may provide the only entrance to a platform
+        // which otherwise would be pruned as unconnected island
+        Collection<OSMNode> entrances = osmdb.getStopsInArea(area.parent);
+        for (OSMNode node : entrances) {
+          var vertex = vertexBuilder.getVertexForOsmNode(node, areaEntity);
+          platformLinkingVertices.add(vertex);
+          visibilityNodes.add(node);
+          startingNodes.add(node);
+          edgeList.addVisibilityVertex(vertex);
         }
 
         for (Ring outerRing : area.outermostRings) {
+          // variable to indicate if some additional entrance points have been added to area
+          boolean linkPointsAdded = !entrances.isEmpty();
           // Add unconnected entries to area if platformEntriesLinking parameter is true
-          if (platformEntriesLinking && "platform".equals(area.parent.getTag("public_transport"))) {
+          if (platformEntriesLinking && area.parent.isPlatform()) {
             List<OsmVertex> endpointsWithin = platformLinkingEndpoints
               .stream()
               .filter(t ->
@@ -251,7 +256,8 @@ public class WalkableAreaBuilder {
               OSMNode node = osmdb.getNode(v.nodeId);
               visibilityNodes.add(node);
               startingNodes.add(node);
-              edgeList.visibilityVertices.add(v);
+              edgeList.addVisibilityVertex(v);
+              linkPointsAdded = true;
             }
           }
 
@@ -266,15 +272,22 @@ public class WalkableAreaBuilder {
             );
             edges.addAll(newEdges);
             ringEdges.addAll(newEdges);
+
             // A node can only be a visibility node only if it is an entrance to the
             // area or a convex point, i.e. the angle is over 180 degrees.
-            if (outerRing.isNodeConvex(i)) {
+            // Also, if additional linking points have been defined, add some points from outer
+            // edge to ensure that platform geometry gets connected
+            if (
+              outerRing.isNodeConvex(i) ||
+              (linkPointsAdded && (i == 0 || i == outerRing.nodes.size() / 2))
+            ) {
               visibilityNodes.add(node);
+              edgeList.addVisibilityVertex(vertexBuilder.getVertexForOsmNode(node, areaEntity));
             }
             if (isStartingNode(node, osmWayIds)) {
               visibilityNodes.add(node);
               startingNodes.add(node);
-              edgeList.visibilityVertices.add(handler.getVertexForOsmNode(node, areaEntity));
+              edgeList.addVisibilityVertex(vertexBuilder.getVertexForOsmNode(node, areaEntity));
             }
           }
           for (Ring innerRing : outerRing.getHoles()) {
@@ -288,51 +301,61 @@ public class WalkableAreaBuilder {
               // For holes, the internal angle is calculated, so we must swap the sign
               if (!innerRing.isNodeConvex(j)) {
                 visibilityNodes.add(node);
+                edgeList.addVisibilityVertex(vertexBuilder.getVertexForOsmNode(node, areaEntity));
               }
               if (isStartingNode(node, osmWayIds)) {
                 visibilityNodes.add(node);
                 startingNodes.add(node);
-                edgeList.visibilityVertices.add(handler.getVertexForOsmNode(node, areaEntity));
+                edgeList.addVisibilityVertex(vertexBuilder.getVertexForOsmNode(node, areaEntity));
               }
             }
           }
         }
       }
 
-      // FIXME: temporary hard limit on size of
-      // areas to prevent way explosion
-      if (polygon.getNumPoints() > maxAreaNodes) {
-        issueStore.add(
-          new AreaTooComplicated(
-            group.getSomeOSMObject().getId(),
-            visibilityNodes.size(),
-            maxAreaNodes
-          )
-        );
+      if (edgeList.visibilityVertices().isEmpty()) {
+        issueStore.add(new UnconnectedArea(group));
+        // Area is not connected to graph. Remove it immediately before it causes any trouble.
+        for (Edge edge : edges) {
+          graph.removeEdge(edge);
+        }
         continue;
-      }
-
-      if (edgeList.visibilityVertices.size() == 0) {
-        issueStore.add(
-          "UnconnectedArea",
-          "Area %s has no connection to street network",
-          osmWayIds.stream().map(Object::toString).collect(Collectors.joining(", "))
-        );
       }
 
       createNamedAreas(edgeList, ring, group.areas);
 
+      if (visibilityNodes.size() > maxAreaNodes) {
+        issueStore.add(new AreaTooComplicated(group, visibilityNodes.size(), maxAreaNodes));
+      }
+
+      // if area is too complex, consider only part of visibility nodes
+      // so that at least some edges passing through the area is added
+      // otherwise routing can use only area boundary edges
+      float skip_ratio = (float) maxAreaNodes / (float) visibilityNodes.size();
+      int i = 0;
+      float sum_i = 0;
       for (OSMNode nodeI : visibilityNodes) {
-        IntersectionVertex startEndpoint = handler.getVertexForOsmNode(nodeI, areaEntity);
+        sum_i += skip_ratio;
+        if (Math.floor(sum_i) < i + 1) {
+          continue;
+        }
+        i = (int) Math.floor(sum_i);
+        IntersectionVertex startEndpoint = vertexBuilder.getVertexForOsmNode(nodeI, areaEntity);
         if (startingNodes.contains(nodeI)) {
           startingVertices.add(startEndpoint);
         }
-
+        int j = 0;
+        float sum_j = 0;
         for (OSMNode nodeJ : visibilityNodes) {
-          P2<OSMNode> nodePair = new P2<>(nodeI, nodeJ);
-          if (alreadyAddedEdges.contains(nodePair)) continue;
+          sum_j += skip_ratio;
+          if (Math.floor(sum_j) < j + 1) {
+            continue;
+          }
+          j = (int) Math.floor(sum_j);
+          NodeEdge edge = new NodeEdge(nodeI, nodeJ);
+          if (alreadyAddedEdges.contains(edge)) continue;
 
-          IntersectionVertex endEndpoint = handler.getVertexForOsmNode(nodeJ, areaEntity);
+          IntersectionVertex endEndpoint = vertexBuilder.getVertexForOsmNode(nodeJ, areaEntity);
 
           Coordinate[] coordinates = new Coordinate[] {
             startEndpoint.getCoordinate(),
@@ -377,28 +400,31 @@ public class WalkableAreaBuilder {
     Set<Edge> edges,
     Set<Edge> edgesToKeep
   ) {
-    if (edges.size() == 0) return;
-    TraverseMode mode;
+    if (edges.isEmpty()) return;
+    StreetMode mode;
     StreetEdge firstEdge = (StreetEdge) edges.iterator().next();
 
     if (firstEdge.getPermission().allows(StreetTraversalPermission.PEDESTRIAN)) {
-      mode = TraverseMode.WALK;
+      mode = StreetMode.WALK;
     } else if (firstEdge.getPermission().allows(StreetTraversalPermission.BICYCLE)) {
-      mode = TraverseMode.BICYCLE;
+      mode = StreetMode.BIKE;
     } else {
-      mode = TraverseMode.CAR;
+      mode = StreetMode.CAR;
     }
-    RoutingRequest options = new RoutingRequest(mode);
+    RouteRequest options = new RouteRequest();
     Set<Edge> usedEdges = new HashSet<>();
     for (Vertex vertex : startingVertices) {
-      ShortestPathTree spt = AStarBuilder
-        .allDirections(new ListedEdgesOnly(edges))
-        .setDominanceFunction(new DominanceFunction.EarliestArrival())
-        .setContext(new RoutingContext(options, graph, vertex, null))
+      ShortestPathTree<State, Edge, Vertex> spt = StreetSearchBuilder
+        .of()
+        .setSkipEdgeStrategy(new ListedEdgesOnly(edges))
+        .setDominanceFunction(new DominanceFunctions.EarliestArrival())
+        .setRequest(options)
+        .setStreetRequest(new StreetRequest(mode))
+        .setFrom(vertex)
         .getShortestPathTree();
 
       for (Vertex endVertex : startingVertices) {
-        GraphPath path = spt.getPath(endVertex);
+        GraphPath<State, Edge, Vertex> path = spt.getPath(endVertex);
         if (path != null) {
           usedEdges.addAll(path.edges);
         }
@@ -428,17 +454,17 @@ public class WalkableAreaBuilder {
     Area area,
     Ring ring,
     int i,
-    HashSet<P2<OSMNode>> alreadyAddedEdges
+    HashSet<NodeEdge> alreadyAddedEdges
   ) {
     OSMNode node = ring.nodes.get(i);
     OSMNode nextNode = ring.nodes.get((i + 1) % ring.nodes.size());
-    P2<OSMNode> nodePair = new P2<>(node, nextNode);
-    if (alreadyAddedEdges.contains(nodePair)) {
+    NodeEdge nodeEdge = new NodeEdge(node, nextNode);
+    if (alreadyAddedEdges.contains(nodeEdge)) {
       return Set.of();
     }
-    alreadyAddedEdges.add(nodePair);
-    IntersectionVertex startEndpoint = handler.getVertexForOsmNode(node, area.parent);
-    IntersectionVertex endEndpoint = handler.getVertexForOsmNode(nextNode, area.parent);
+    alreadyAddedEdges.add(nodeEdge);
+    IntersectionVertex startEndpoint = vertexBuilder.getVertexForOsmNode(node, area.parent);
+    IntersectionVertex endEndpoint = vertexBuilder.getVertexForOsmNode(nextNode, area.parent);
 
     return createSegments(startEndpoint, endEndpoint, List.of(area), edgeList);
   }
@@ -464,29 +490,28 @@ public class WalkableAreaBuilder {
         intersects.add(area);
       }
     }
-    if (intersects.size() == 0) {
+    if (intersects.isEmpty()) {
       // apparently our intersection here was bogus
       return Set.of();
     }
     // do we need to recurse?
     if (intersects.size() == 1) {
-      Area area = intersects.get(0);
+      Area area = intersects.getFirst();
       OSMWithTags areaEntity = area.parent;
 
-      StreetTraversalPermission areaPermissions = OSMFilter.getPermissionsForEntity(
-        areaEntity,
+      StreetTraversalPermission areaPermissions = areaEntity.overridePermissions(
         StreetTraversalPermission.PEDESTRIAN_AND_BICYCLE
       );
 
-      float carSpeed = wayPropertySet.getCarSpeedForWay(areaEntity, false);
+      float carSpeed = areaEntity
+        .getOsmProvider()
+        .getOsmTagMapper()
+        .getCarSpeedForWay(areaEntity, false);
 
       double length = SphericalDistanceLibrary.distance(
         startEndpoint.getCoordinate(),
         endEndpoint.getCoordinate()
       );
-
-      int cls = StreetEdge.CLASS_OTHERPATH;
-      cls |= OSMFilter.getStreetClasses(areaEntity);
 
       String label =
         "way (area) " +
@@ -495,29 +520,21 @@ public class WalkableAreaBuilder {
         startEndpoint.getLabel() +
         " to " +
         endEndpoint.getLabel();
-      I18NString name = handler.getNameForWay(areaEntity, label);
+      I18NString name = namer.getNameForWay(areaEntity, label);
 
-      AreaEdge street = new AreaEdge(
-        startEndpoint,
-        endEndpoint,
-        line,
-        name,
-        length,
-        areaPermissions,
-        false,
-        edgeList
-      );
-      street.setCarSpeed(carSpeed);
-
-      if (!areaEntity.hasTag("name") && !areaEntity.hasTag("ref")) {
-        street.setHasBogusName(true);
-      }
-
-      if (areaEntity.isTagFalse("wheelchair")) {
-        street.setWheelchairAccessible(false);
-      }
-
-      street.setStreetClass(cls);
+      AreaEdgeBuilder streetEdgeBuilder = new AreaEdgeBuilder()
+        .withFromVertex(startEndpoint)
+        .withToVertex(endEndpoint)
+        .withGeometry(line)
+        .withName(name)
+        .withMeterLength(length)
+        .withPermission(areaPermissions)
+        .withBack(false)
+        .withArea(edgeList)
+        .withCarSpeed(carSpeed)
+        .withBogusName(areaEntity.hasNoName())
+        .withWheelchairAccessible(areaEntity.isWheelchairAccessible())
+        .withLink(areaEntity.isLink());
 
       label =
         "way (area) " +
@@ -526,36 +543,33 @@ public class WalkableAreaBuilder {
         endEndpoint.getLabel() +
         " to " +
         startEndpoint.getLabel();
-      name = handler.getNameForWay(areaEntity, label);
+      name = namer.getNameForWay(areaEntity, label);
 
-      AreaEdge backStreet = new AreaEdge(
-        endEndpoint,
-        startEndpoint,
-        line.reverse(),
-        name,
-        length,
-        areaPermissions,
-        true,
-        edgeList
-      );
-      backStreet.setCarSpeed(carSpeed);
-
-      if (!areaEntity.hasTag("name") && !areaEntity.hasTag("ref")) {
-        backStreet.setHasBogusName(true);
-      }
-
-      if (areaEntity.isTagFalse("wheelchair")) {
-        backStreet.setWheelchairAccessible(false);
-      }
-
-      backStreet.setStreetClass(cls);
+      AreaEdgeBuilder backStreetEdgeBuilder = new AreaEdgeBuilder()
+        .withFromVertex(endEndpoint)
+        .withToVertex(startEndpoint)
+        .withGeometry(line.reverse())
+        .withName(name)
+        .withMeterLength(length)
+        .withPermission(areaPermissions)
+        .withBack(true)
+        .withArea(edgeList)
+        .withCarSpeed(carSpeed)
+        .withBogusName(areaEntity.hasNoName())
+        .withWheelchairAccessible(areaEntity.isWheelchairAccessible())
+        .withLink(areaEntity.isLink());
 
       if (!wayPropertiesCache.containsKey(areaEntity)) {
-        WayProperties wayData = wayPropertySet.getDataForWay(areaEntity);
+        WayProperties wayData = areaEntity
+          .getOsmProvider()
+          .getWayPropertySet()
+          .getDataForWay(areaEntity);
         wayPropertiesCache.put(areaEntity, wayData);
       }
 
-      handler.applyWayProperties(
+      AreaEdge street = streetEdgeBuilder.buildAndConnect();
+      AreaEdge backStreet = backStreetEdgeBuilder.buildAndConnect();
+      normalizer.applyWayProperties(
         street,
         backStreet,
         wayPropertiesCache.get(areaEntity),
@@ -576,8 +590,7 @@ public class WalkableAreaBuilder {
         if (lineParts.getLength() > 0.000001) {
           Coordinate edgeCoordinate = null;
           // this is either a LineString or a MultiLineString (we hope)
-          if (lineParts instanceof MultiLineString) {
-            MultiLineString mls = (MultiLineString) lineParts;
+          if (lineParts instanceof MultiLineString mls) {
             boolean found = false;
             for (int i = 0; i < mls.getNumGeometries(); ++i) {
               LineString segment = (LineString) mls.getGeometryN(i);
@@ -593,21 +606,15 @@ public class WalkableAreaBuilder {
                 }
               }
             }
-          } else if (lineParts instanceof LineString) {
-            edgeCoordinate = ((LineString) lineParts).getEndPoint().getCoordinate();
+          } else if (lineParts instanceof LineString lineString) {
+            edgeCoordinate = lineString.getEndPoint().getCoordinate();
           } else {
             continue;
           }
 
           IntersectionVertex newEndpoint = areaBoundaryVertexForCoordinate.get(edgeCoordinate);
           if (newEndpoint == null) {
-            newEndpoint =
-              new IntersectionVertex(
-                graph,
-                "area splitter at " + edgeCoordinate,
-                edgeCoordinate.x,
-                edgeCoordinate.y
-              );
+            newEndpoint = vertexFactory.intersection(edgeCoordinate);
             areaBoundaryVertexForCoordinate.put(edgeCoordinate, newEndpoint);
           }
           edges.addAll(createSegments(startEndpoint, newEndpoint, List.of(area), edgeList));
@@ -628,29 +635,28 @@ public class WalkableAreaBuilder {
       }
       NamedArea namedArea = new NamedArea();
       OSMWithTags areaEntity = area.parent;
-      int cls = StreetEdge.CLASS_OTHERPATH;
-      cls |= OSMFilter.getStreetClasses(areaEntity);
-      namedArea.setStreetClass(cls);
 
       String id = "way (area) " + areaEntity.getId() + " (splitter linking)";
-      I18NString name = handler.getNameForWay(areaEntity, id);
+      I18NString name = namer.getNameForWay(areaEntity, id);
       namedArea.setName(name);
 
       if (!wayPropertiesCache.containsKey(areaEntity)) {
-        WayProperties wayData = wayPropertySet.getDataForWay(areaEntity);
+        WayProperties wayData = areaEntity
+          .getOsmProvider()
+          .getWayPropertySet()
+          .getDataForWay(areaEntity);
         wayPropertiesCache.put(areaEntity, wayData);
       }
 
-      Double bicycleSafety = wayPropertiesCache.get(areaEntity).getBicycleSafetyFeatures().first;
+      double bicycleSafety = wayPropertiesCache.get(areaEntity).bicycleSafety().forward();
       namedArea.setBicycleSafetyMultiplier(bicycleSafety);
 
-      Double walkSafety = wayPropertiesCache.get(areaEntity).getWalkSafetyFeatures().first;
+      double walkSafety = wayPropertiesCache.get(areaEntity).walkSafety().forward();
       namedArea.setWalkSafetyMultiplier(walkSafety);
 
       namedArea.setOriginalEdges(intersection);
 
-      StreetTraversalPermission permission = OSMFilter.getPermissionsForEntity(
-        areaEntity,
+      StreetTraversalPermission permission = areaEntity.overridePermissions(
         StreetTraversalPermission.PEDESTRIAN_AND_BICYCLE
       );
       namedArea.setPermission(permission);
@@ -663,8 +669,7 @@ public class WalkableAreaBuilder {
     boolean isCandidate = false;
     Vertex start = null;
     for (Edge e : osmVertex.getIncoming()) {
-      if (e instanceof StreetEdge && !(e instanceof AreaEdge)) {
-        StreetEdge se = (StreetEdge) e;
+      if (e instanceof StreetEdge se && !(e instanceof AreaEdge)) {
         if (Arrays.asList(1, 2, 3).contains(se.getPermission().code)) {
           isCandidate = true;
           start = se.getFromVertex();
@@ -688,10 +693,12 @@ public class WalkableAreaBuilder {
     return false;
   }
 
-  record ListedEdgesOnly(Set<Edge> edges) implements SkipEdgeStrategy {
+  record ListedEdgesOnly(Set<Edge> edges) implements SkipEdgeStrategy<State, Edge> {
     @Override
     public boolean shouldSkipEdge(State current, Edge edge) {
       return !edges.contains(edge);
     }
   }
+
+  private record NodeEdge(OSMNode from, OSMNode to) {}
 }
